# matcher

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  fly.toml  models.py  pyproject.toml  recommender.py  replit.md  requirements.txt
.claude/: launch.json  run_dev.sh
MovieMatcher 4/: MANIFEST.in  RECOMMENDATION_LOGIC.md  pyproject.toml  pyproject.toml.backup  setup.py
attached_assets/: Pasted-Help-me-upgrade-my-movie-recommendation-scoring-logic-The-core-system-is-already-in-place-I-want-t-1750394872156_1750394872157.txt
static/css/: style.css
static/js/: app.js  auth.js  books.js  feedback.js  movies.js  tv.js
templates/: books.html  index.html  movies.html  tv.html  watchlist.html
