[project]
name = "movie-recommendation-app"
version = "1.0.0"
description = "A Flask-based movie recommendation application using TMDB API"
requires-python = ">=3.11"
dependencies = [
    "Flask",
    "Flask-SQLAlchemy", 
    "requests",
    "psycopg2-binary",
    "gunicorn",
    "email-validator"
]